fix: Homepage btn alignment fixed

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,75 +1,74 @@
 .container {
-  display: flex;
-  align-items: center;
-  gap: 100px;
+	display: flex;
+	align-items: center;
+	gap: 100px;
 }
 
 .item {
-  flex: 1;
-  display: flex;
-  flex-direction: column;
-  gap: 34px;
+	flex: 1;
+	display: flex;
+	flex-direction: column;
+	gap: 34px;
 }
 
 .img {
-  width: 100%;
-  height: 500px;
-  object-fit: contain;
-  animation: move 3s infinite ease-in-out alternate;
+	width: 100%;
+	height: 500px;
+	object-fit: contain;
+	animation: move 3s infinite ease-in-out alternate;
 }
 
 @keyframes move {
-  from {
-    transform: translateY(-15px);
-  }
-  to {
-    transform: translateY(15px);
-  }
+	from {
+		transform: translateY(-15px);
+	}
+	to {
+		transform: translateY(15px);
+	}
 }
 
 .title {
-  font-size: 54px;
-  background: linear-gradient(to bottom, #0ce05a, #0791a3);
-  background-clip: text;
-  -webkit-background-clip: text;
-  -webkit-text-fill-color: transparent;
+	font-size: 54px;
+	background: linear-gradient(to bottom, #0ce05a, #0791a3);
+	background-clip: text;
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
 }
 
 .desc {
-  font-size: 24px;
-  font-weight: 300;
+	font-size: 24px;
+	font-weight: 300;
 }
+
 
 /* media queries */
 
 @media screen and (max-width: 768px) {
-  .container {
-    flex-direction: column-reverse;
-    gap: 50px;
-    margin-top: -70px;
-  }
-  /* want image on top */
-  .img {
-    height: 300px;
-  }
-  .title {
-    font-size: 30px;
-    font-weight: 800;
-    text-align: center;
-  }
-  .desc {
-    font-size: 18px;
-    text-align: center;
-  }
+	.container {
+		flex-direction: column-reverse;
+		gap: 50px;
+		margin-top: -70px;
+	}
+	/* want image on top */
+	.img {
+		height: 300px;
+	}
+	.title {
+		font-size: 30px;
+		font-weight: 800;
+		text-align: center;
+	}
+	.desc {
+		font-size: 18px;
+		text-align: center;
+	}
 
-  .item{
-    justify-content: center;
-  }
+	.item {
+		justify-content: center;
+	}
 
-  .btn{
-    width: 100%;
-    text-align: center;
-  }
+	.btnContainer {
+		display: flex;
+		justify-content: center;
+	}
 }
-
-
